--- a/home.html
+++ b/home.html
@@ -21,21 +21,24 @@
     <div class="main">
       <img src="images/HomePage.jpg" alt="Michal" class="full-width-img">
    
-      <!-- About -->
-    <div class="about" id="about">
-    <h1 id="headers">מיכל אבידן</h1>
+<!-- About -->
+<div class="about" id="about">
+    <h1 class="headers">מיכל אבידן</h1>
     <p id="description">
-        מורה לחינוך גופני בעלת תואר ראשון B.ed משנת 1991 ומלמדת בתיכון הראל במבשרת ציון כבר 21 שנה.
-        <br>
-        מדריכה לפילאטיס מזרן ומכשירים משנת 2004.
-        <br>
-        20 שנה בעלת סטודיו לפילאטיס מזרן בהר אדר.
-        <br>
-        עובדת עם קבוצות קטנות של עד 10 מתאמנים בקבוצה ובנוסף באימונים אישיים.
-        <br>
-        בעלת ידע עשיר וניסיון בעבודה על יציבה ושיקום אחרי פציעות.
-    </p>
-  </div>
+    מורה לחינוך גופני בעלת תואר ראשון B.ed משנת 1991 
+    <br>
+    מלמדת בתיכון הראל במבשרת ציון כבר 21 שנה 
+    <br> 
+    מדריכה לפילאטיס מזרן ומכשירים משנת 2004 
+    <br>
+    20 שנה בעלת סטודיו לפילאטיס מזרן בהר אדר
+    <br>
+    עובדת עם קבוצות קטנות של עד 10 מתאמנים בקבוצה ובנוסף באימונים אישיים
+    <br>
+    בעלת ידע עשיר וניסיון בעבודה על יציבה ושיקום אחרי פציעות 
+  </P>
+</div>
+
 
   <!-- Classes -->
 <div class="typeOfClasses" id="classes-group">
@@ -215,4 +218,5 @@
 <script src="js/main.js"></script>
 <script src="js/home.js"></script>
 </body>
+
 </html>
