--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
 
                     <a href="#" class="forgot-pass">שכחתי סיסמא</a>
 
-                    <button type="submit" class="btn btn-login-submit">התחברות</button>
+                    <button type="submit">התחברות</button>
                 </form>
 
                 <hr style="margin: 20px 0;">
@@ -47,7 +47,7 @@
                     <!-- Send to registration page -->
                     <p>אין משתמש?</p>
                     <a href="registration.html">
-                        <button type="button" class="btn btn-login-register">להרשמה</button>
+                        <button type="button" class="secondary-btn">להרשמה</button>
                     </a>
                 </div>
             </div>
@@ -67,6 +67,5 @@
     <script src="js/login.js"></script>
 
 </body>
-
 
 </html>
